august 24 reserve functionality bug fixes

--- a/catalog/view/theme/default/template/checkout/checkout_booking_mehthod_bck.twig
+++ b/catalog/view/theme/default/template/checkout/checkout_booking_mehthod_bck.twig
@@ -123,14 +123,14 @@ $(document).ready(function() {
 {% else %}
 $(document).ready(function() {
     $.ajax({
-        url: 'index.php?route=checkout/payment_address',
+        url: 'index.php?route=checkout/booking_method',
         dataType: 'html',
         success: function(html) {
-            $('#collapse-payment-address .panel-body').html(html);
+           $('#collapse-checkout-option .panel-body').html(html);
 
-            $('#collapse-payment-address').parent().find('.panel-heading .panel-title').html('<a href="#collapse-payment-address" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ text_checkout_payment_address }} <i class="fa fa-caret-down"></i></a>');
+			$('#collapse-checkout-option').parent().find('.panel-heading .panel-title').html('<a href="#collapse-checkout-option" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ text_checkout_option }} <i class="fa fa-caret-down"></i></a>');
 
-            $('a[href=\'#collapse-payment-address\']').trigger('click');
+			$('a[href=\'#collapse-checkout-option\']').trigger('click');
         },
         error: function(xhr, ajaxOptions, thrownError) {
             alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
@@ -139,6 +139,53 @@ $(document).ready(function() {
 });
 {% endif %}
 
+// Payment Address
+$(document).delegate('#button-booking-method', 'click', function() {
+     $.ajax({
+        url: 'index.php?route=checkout/booking_method/save',
+        type: 'post',
+        data: $('#collapse-checkout-option input[type=\'radio\']:checked, #collapse-checkout-option input[type=\'checkbox\']:checked, #collapse-checkout-option textarea'),
+        dataType: 'json',
+        beforeSend: function() {
+         	$('#button-booking-method').button('loading');
+		},
+        complete: function() {
+            $('#button-booking-method').button('reset');
+        },
+
+        success: function(json) {
+            $('.alert-dismissible, .text-danger').remove();
+
+            if (json['redirect']) {
+                location = json['redirect'];
+            } else if (json['error']) {
+                $('#button-booking-method').button('reset');
+                
+                if (json['error']['warning']) {
+                    $('#collapse-checkout-option .panel-body').prepend('<div class="alert alert-danger alert-dismissible">' + json['error']['warning'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+                }
+            } else {
+                $.ajax({
+                    url: 'index.php?route=checkout/payment_address',
+                    dataType: 'html',
+                    success: function(html) {
+                        $('#collapse-payment-address .panel-body').html(html);
+
+                        $('#collapse-payment-address').parent().find('.panel-heading .panel-title').html('<a href="#collapse-payment-address" data-toggle="collapse" data-parent="#accordion" class="accordion-toggle">{{ text_checkout_payment_address }} <i class="fa fa-caret-down"></i></a>');
+
+                        $('a[href=\'#collapse-payment-address\']').trigger('click');
+                    },
+                    error: function(xhr, ajaxOptions, thrownError) {
+                        alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+                    }
+                });
+            }
+        },
+        error: function(xhr, ajaxOptions, thrownError) {
+            alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+        }
+    });
+});
 // Checkout
 $(document).delegate('#button-account', 'click', function() {
     $.ajax({
