--- a/catalog/view/theme/default/template/product/category.twig
+++ b/catalog/view/theme/default/template/product/category.twig
@@ -133,7 +133,10 @@
               <div class="caption">
                 <h4><a href="{{ product.href }}">{{ product.name }}</a></h4>
                 <p>{{ product.description }}</p>
-                {% if product.price %}
+                {% if product.stock == 'Out Of Stock' %}
+                <p class="text-danger">{{ product.stock }}</p>
+                {% endif %}
+                {% if product.price and product.stock != 'Out Of Stock' %}
                 <p class="price"> {% if not product.special %}
                   {{ product.price }}
                   {% else %} <span class="price-new">{{ product.special }}</span> <span class="price-old">{{ product.price }}</span> {% endif %}
@@ -144,16 +147,18 @@
                   {% if product.rating < i %} <span class="fa fa-stack"><i class="fa fa-star-o fa-stack-2x"></i></span> {% else %} <span class="fa fa-stack"><i class="fa fa-star fa-stack-2x"></i><i class="fa fa-star-o fa-stack-2x"></i></span>{% endif %}
                   {% endfor %} </div>
                 {% endif %} </div>
-              <div class="button-group">
-                <button type="button" data-toggle="tooltip" title="Add to cart" onclick="cart.add('{{ product.product_id }}', '{{ product.minimum }}');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md"></span></button>
+                {% if product.stock != 'Out Of Stock' %}
+                <div class="button-group">
+                  <button type="button" data-toggle="tooltip" title="Add to cart" onclick="cart.add('{{ product.product_id }}', '{{ product.minimum }}');"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm hidden-md"></span></button>
 
-                {% if reseller %}
-                <button type="button" data-toggle="tooltip" title="Reserve" onclick="cart.add('{{ product.product_id }}', '{{ product.minimum }}', '1');"><i style="color:red" class="fa fa-ticket"></i> <span class="hidden-xs hidden-sm hidden-md"></span></button>
+                  {% if reseller %}
+                  <button type="button" data-toggle="tooltip" title="Reserve" onclick="cart.add('{{ product.product_id }}', '{{ product.minimum }}', '1');"><i style="color:red" class="fa fa-ticket"></i> <span class="hidden-xs hidden-sm hidden-md"></span></button>
+                  {% endif %}
+                  <button type="button" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}');"><i class="fa fa-heart"></i></button>
+                  
+                  <button type="button" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}');"><i class="fa fa-exchange"></i></button>
+                </div>
                 {% endif %}
-                <button type="button" data-toggle="tooltip" title="{{ button_wishlist }}" onclick="wishlist.add('{{ product.product_id }}');"><i class="fa fa-heart"></i></button>
-                
-                <button type="button" data-toggle="tooltip" title="{{ button_compare }}" onclick="compare.add('{{ product.product_id }}');"><i class="fa fa-exchange"></i></button>
-              </div>
             </div>
           </div>
         </div>
