--- a/catalog/view/theme/default/template/extension/module/account.twig
+++ b/catalog/view/theme/default/template/extension/module/account.twig
@@ -9,8 +9,8 @@
   {% if logged %}
   <a href="{{ edit }}" class="list-group-item">{{ text_edit }}</a> 
   <a href="{{ password }}" class="list-group-item">{{ text_password }}</a>
-  <a href="{{ wallet }}" class="list-group-item">{{text_wallet}}</a>
-  <a href="{{ reservation }}" class="list-group-item">{{text_reservation}}</a>
+  <a href="{{ wallet }}" class="list-group-item ">{{text_wallet}}</a>
+  {# <a href="{{ reservation }}" class="list-group-item">{{text_reservation}}</a> #}
   {% endif %}
 
   <a href="{{ address }}" class="list-group-item">{{ text_address }}</a>
