multiple address systemt

--- a/catalog/view/theme/default/template/checkout/payment_address.twig
+++ b/catalog/view/theme/default/template/checkout/payment_address.twig
@@ -18,8 +18,8 @@
   </div>
   <div class="radio">
     <label>
-      <input type="radio" name="payment_address" value="new" />
-      {{ text_address_new }}</label>
+      <input type="radio" name="payment_address" value="new" />{{ text_address_new }}
+    </label>
   </div>
   {% endif %}
   <br />
