--- a/catalog/view/theme/default/template/checkout/checkout.twig
+++ b/catalog/view/theme/default/template/checkout/checkout.twig
@@ -442,6 +442,48 @@ $(document).delegate('#button-payment-address', 'click', function() {
 });
 
 // Shipping Address
+$(document).delegate('#submit-address-button', 'click', function(e) {
+    $.ajax({
+        url: 'index.php?route=checkout/shipping_address/save',
+        type: 'post',
+        data: $('#new-address-form input[type=\'text\'], #new-address-form input[type=\'number\'], #new-address-form input[type=\'date\'], #new-address-form input[type=\'datetime-local\'], #new-address-form input[type=\'time\'], #new-address-form input[type=\'password\'], #new-address-form input[type=\'checkbox\']:checked, #new-address-form input[type=\'radio\']:checked, #new-address-form textarea, #new-address-form select'),
+        dataType: 'json',
+        beforeSend: function() {
+			$('#submit-address-button').button('loading');
+	    },
+        success: function(json) {
+            $('.alert-dismissible, .text-danger').remove();
+			$('.form-group').removeClass('has-error');
+            if (json['redirect']) {
+                location = json['redirect'];
+            } else if (json['error']) {
+                $('#submit-address-button').button('reset');
+
+                if (json['error']['warning']) {
+                    $('#new-address-form .panel-body').prepend('<div class="alert alert-warning alert-dismissible">' + json['error']['warning'] + '<button type="button" class="close" data-dismiss="alert">&times;</button></div>');
+                }
+
+				for (i in json['error']) {
+					var element = $('#input-multi-shipping-' + i.replace('_', '-'));
+
+					if ($(element).parent().hasClass('input-group')) {
+						$(element).parent().after('<div class="text-danger">' + json['error'][i] + '</div>');
+					} else {
+						$(element).after('<div class="text-danger">' + json['error'][i] + '</div>');
+					}
+				}
+
+				// Highlight any found errors
+				$('.text-danger').parent().parent().addClass('has-error');
+            }
+        },
+        error: function(xhr, ajaxOptions, thrownError) {
+            alert(thrownError + "\r\n" + xhr.statusText + "\r\n" + xhr.responseText);
+        }
+        
+    })
+})
+
 $(document).delegate('#button-shipping-address', 'click', function() {
     $.ajax({
         url: 'index.php?route=checkout/shipping_address/save',
