--- a/catalog/view/theme/default/template/product/product.twig
+++ b/catalog/view/theme/default/template/product/product.twig
@@ -397,10 +397,18 @@ $('#button-cart, #button-reserve').on('click', function(event) {
 		data: $('#product input[type=\'text\'], #product input[type=\'hidden\'], #product input[type=\'radio\']:checked, #product input[type=\'checkbox\']:checked, #product select, #product textarea'),
 		dataType: 'json',
 		beforeSend: function() {
-			$('#button-cart').button('loading');
+      if(event.target.id == 'button-reserve'){
+        $('#button-reserve').button('loading');
+      }else{
+        $('#button-cart').button('loading');
+      }
 		},
 		complete: function() {
-			$('#button-cart').button('reset');
+      if(event.target.id == 'button-reserve'){
+        $('#button-reserve').button('reset');
+      }else{
+        $('#button-cart').button('reset');
+      }
 		},
 		success: function(json) {
 			$('.alert-dismissible, .text-danger').remove();
