--- a/admin/view/template/extension/module/wallet_add_credit.twig
+++ b/admin/view/template/extension/module/wallet_add_credit.twig
@@ -24,34 +24,120 @@
       <button type="button" class="close" data-dismiss="alert">&times;</button>
     </div>
     {% endif %}
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h3 class="panel-title"><i class="fa fa-plus"></i>Add Credit</h3>
+        </div>
+        <div class="panel-body">
+          <form action="{{ action.save }}" method="post" enctype="multipart/form-data" id="form-module" class="form-horizontal">
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-message">Customer ID</label>
+              <div class="col-sm-10">
+                <input type="text" name="customer_name" placeholder="Customer Name" id="input-message" class="form-control" />
+                <input type="hidden" name="customer_email" />
+                <input type="hidden" name="customer_id" />
+                {% if error.name  %}
+                <div class="text-danger">{{ error_name }}</div>
+                {% endif %}
+              </div>
+            </div>
+            <div class="form-group">
+              <label class="col-sm-2 control-label" for="input-message">Amount</label>
+              <div class="col-sm-10">
+                <input type="text" name="amount" value="{{ amount }}" placeholder="Amount to  credit" id="input-message" class="form-control" />
+                {% if error.name  %}
+                <div class="text-danger">{{ error_name }}</div>
+                {% endif %}
+              </div>
+            </div>
+
+          </form>
+        </div>
+      </div>
+
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h3 class="panel-title"><i class="fa fa-plus"></i>Add Credit</h3>
+        <h3 class="panel-title"><i class="fa fa-list"></i> Customer Transactions</h3> | recent 10 records
       </div>
-      <div class="panel-body">
-        <form action="{{ action.save }}" method="post" enctype="multipart/form-data" id="form-module" class="form-horizontal">
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-message">Customer ID</label>
-            <div class="col-sm-10">
-              <input type="text" name="customer_id" value="{{ customer_id }}" placeholder="Customer ID" id="input-message" class="form-control" />
-              {% if error.name  %}
-              <div class="text-danger">{{ error_name }}</div>
-              {% endif %}
-            </div>
-          </div>
-          <div class="form-group">
-            <label class="col-sm-2 control-label" for="input-message">Amount</label>
-            <div class="col-sm-10">
-              <input type="text" name="amount" value="{{ amount }}" placeholder="Amount to  credit" id="input-message" class="form-control" />
-              {% if error.name  %}
-              <div class="text-danger">{{ error_name }}</div>
-              {% endif %}
-            </div>
-          </div>
 
-        </form>
+      <div class="panel-body">
+        <div class="table-responsive">
+			    <table class="table table-bordered table-hover">
+				    <thead>
+				      <tr>
+                <td width="1" style="text-align: center;">id</td>
+                <td class="text-left">Customer Email</td>
+                <td class="text-left">Transaction Type</td>
+                <td class="text-left">Status</td>
+                <td class="text-left">Amount</td>
+                <td class="text-left">{{ column_date_added }}</td>
+
+              </tr>
+            </thead>
+				    <tbody id="transaction_list">
+                <tr>
+                <td class="text-center" colspan="6">{{ text_no_results }}</td>
+                </tr>
+				    </tbody>
+				  </table>
+			  </div>
+        <div class="row">
+          <div class="col-sm-12 text-left">{{ pagination }}</div>
+        </div>
+
       </div>
     </div>
+
   </div>
+  <script type="text/javascript">
+    
+    $('input[name=\'customer_name\']').autocomplete({
+    'source': function(request, response) {
+      
+      $.ajax({
+        url: 'index.php?route=customer/customer/autocomplete&user_token={{ user_token }}&filter_name=' +  encodeURIComponent(request),
+        dataType: 'json',
+        success: function(json) {
+          response($.map(json, function(item) {
+            return {
+              label: item['name'],
+              value: item['email'],
+              data_id: item['customer_id']
+            }
+          }));
+        }
+      });
+    },
+    'select': function(item) {
+      $('input[name=\'customer_name\']').val(item['label']);
+      $('input[name=\'customer_email\']').val(item['value']);
+      $('input[name=\'customer_id\']').val(item['data_id']);
+
+      $.ajax({
+        url: 'index.php?route=extension/module/wallet/customer_transactions&user_token={{ user_token }}&limit=10&filter_customer_email=' +  encodeURIComponent(item['value']),
+        dataType: 'json',
+        success: function(json) {
+          if(json) {
+            var str_html = ''
+            for (transaction of json) {
+                console.log(transaction)
+                str_html +=  '<tr>'
+                  + '<td style="text-align: center;">' + transaction['wallet_id'] + '</td>'
+                  + '<td class="text-left">' + transaction['email'] + '</td>'
+                  + '<td class="text-left">' + transaction['transaction_type'] + '</td>'
+                  + '<td class="text-left">' + transaction['status'] + '</td>'
+                  + '<td class="text-left">' + transaction['amount'] + '</td>'
+                  + '<td class="text-left">' + transaction['date_added'] + '</td>'
+                + '</tr>'      
+            }
+            $('#transaction_list').html(str_html);
+          }
+          return false;
+        }
+      });
+
+    }
+  });
+  </script>
 </div>
 {{ footer }}
