multiple address systemt

--- a/admin/view/template/sale/order_info.twig
+++ b/admin/view/template/sale/order_info.twig
@@ -137,7 +137,16 @@
             <tr>
               <td class="text-left">{{ payment_address }}</td>
               {% if shipping_method %}
-              <td class="text-left">{{ shipping_address }}</td>
+                {% if multiple_address %}
+                <td class="text-left">
+                {% for address in multiple_address %}
+                {{ address }}
+                <hr />
+                {% endfor %}
+                </td>
+                {% elseif shipping_address %}
+                <td class="text-left">{{ shipping_address }}</td>
+                {% endif %}
               {% endif %} </tr>
           </tbody>
         </table>
